--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -4,6 +4,7 @@
   
 
 <header>
+  
   {% with request.resolver_match.url_name as url_name %}
     <nav class="navbar navbar-expand-lg" data-bs-target="light">
       <div class="container-fluid">
@@ -24,7 +25,7 @@
                 href="{% url 'post_list' %}">Blog</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="#">About</a>
+              <a class="nav-link {% if url_name == 'about' %}active{% endif %}" aria-current="page" href="{% url 'about' %}">About</a>
             </li>
             <li class="nav-item">
               <a class="nav-link {% if url_name == 'contact' %}active{% endif %}" aria-current="page" 
