fixed misspelling, add image in about.html add about app in settings and urls

--- a/about/templates/about/about.html
+++ b/about/templates/about/about.html
@@ -26,10 +26,10 @@
                         I longed for the comfort and guidance that only personal stories can provide,
                         <br>but struggled to find a community where these narratives were shared. <br>
                         This profound need for connection and understanding inspired me to start this blog. <br>
-                        this is my way of creating the community and resource I wished I had when my daughter was born. <br>
+                        And this is my way of creating the community and resource I wished I had when my daughter was born. <br>
                         It is a place for us to come together, share our experiences, and support one another <br>
                         through the unique journey of living with CHARGE syndrome. <br><br>
-                         Thank you for being a part of this community. <br>
+                        Thank you for being a part of this community. <br>
                         All my love <br> Linnéa
                     
                     </p>
@@ -81,7 +81,7 @@
                     <h2 class="card-title">Inspiring Hope and Resilience:</h2><br>
                     <p class="card-text">
                         The stories shared here are a testament to the incredible strength and resilience of <br>
-                        individuals and families affected by CHARGE syndrome. 
+                        individuals and families affected by CHARGE syndrome. <br>
                         I hope these stories inspire hope and provide comfort to others on a similar journey.
 
                     </p>
@@ -89,6 +89,23 @@
             </div>
         </div>
     </div>
-   
+    <div class="about-card mb-3" style="width:100%">
+        <div class="row g-0">
+            <div class="col-md-4">
+                <img src="{% static 'images/dewang-gupta-r8q16QN40Xg-unsplash.webp' %}" class="img-fluid rounded-start" alt="">
+            </div>
+            <div class="col-md-8">
+                <div class="card-body">
+                    <h2 class="card-title">Want to read more about Charge Syndrome?</s></h2><br>
+            
+                       <a style="text-decoration:none;" target="_blank" href="https://my.clevelandclinic.org/health/diseases/23472-charge-syndrome"> 
+                        If you click here, you can read more in-depth medical information about what Charge Syndrome means
+                        </a>
+                    
+                </div>
+            </div>
+        </div>
+    </div>
 {% endblock content %}
 
+https://my.clevelandclinic.org/health/diseases/23472-charge-syndrome
