--- a/contact/templates/contact/contact.html
+++ b/contact/templates/contact/contact.html
@@ -6,10 +6,12 @@
 <div class="container">
     <form method="POST" enctype="multipart/form-data" class="p-2 form">
         <h1 class="text-center">Contact</h1>
+        <p class="text-center">Do you have any questions, concerns or just want to get in touch with us? <br>
+            Fill out the form below and we'll respond as soon as we can!</p> <br>
         {% csrf_token %}
         {{ form|crispy }}
         <div class="text-center">
-            <button type="submit" class="btn btn-secondary mt-2">Contact</button>
+            <button type="submit" class="btn btn-primary mt-2">Send</button>
         </div>
     </form>
 </div>
