--- a/templates/allauth/account/login.html
+++ b/templates/allauth/account/login.html
@@ -7,12 +7,13 @@
 
 {% block content %}
 <div class="container text-center">
-  <h1>{% trans "Sign In" %}</h1>
-
-  <p>{% blocktrans %}If you have not created an account yet, then please
-  <a href="{{ signup_url }}">sign up</a> first.{% endblocktrans %}</p>
+  
 
   <form class="form p-2" method="POST" action="{% url 'account_login' %}">
+    <h1 class="text-center">{% trans "Sign In" %}</h1>
+
+    <p class="text-center">{% blocktrans %}Are you not already part of our community? What are you waiting for, 
+    <a class="text-center" href="{{ signup_url }}">sign up</a> now!{% endblocktrans %}</p>
     {% csrf_token %}
     {{ form|crispy }}
     {% if redirect_field_value %}
