--- a/templates/allauth/account/signup.html
+++ b/templates/allauth/account/signup.html
@@ -6,11 +6,10 @@
 
 {% block content %}
 <div class="container text-center">
-  <h1>{% trans "Sign Up" %}</h1>
-
-  <p>{% blocktrans %}Already have an account? Then please <a href="{{ login_url }}">sign in</a>.{% endblocktrans %}</p>
 
   <form class="form p-2" id="signup_form" method="post" action="{% url 'account_signup' %}">
+    <h1 class="text-center">{% trans "Sign Up" %}</h1>
+    <p class="text-center">{% blocktrans %}Do you want to become part of our community? Register below!<br> Are you already part of us? Then please <a href="{{ login_url }}">sign in</a>.{% endblocktrans %}</p>
     {% csrf_token %}
     {{ form|crispy }}
     {% if redirect_field_value %}
