--- a/blog/templates/blog/post_confirm_delete.html
+++ b/blog/templates/blog/post_confirm_delete.html
@@ -9,7 +9,8 @@
         <form method="post" class="text-center">
             {% csrf_token %}
             <p>Are you sure you want to delete "{{object.title}}"?</p>
-            <input type="submit" value="Confirm" class="btn btn-primary w-25">
+            <input type="submit" value="Confirm" class="btn btn-danger w-25">
+            <a href="{% url 'post_detail' post.id %}" role="button" class="btn btn-primary">back</a>
         </form>
     </div>
 </div>
