--- a/templates/allauth/account/logout.html
+++ b/templates/allauth/account/logout.html
@@ -15,7 +15,8 @@
     {% if redirect_field_value %}
     <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}"/>
     {% endif %}
-    <button type="submit" class="btn btn-primary w25 mb-3">{% trans 'Sign Out' %}</button>
+    <button type="submit" class="btn btn-danger w25 mb-3">{% trans 'Sign Out' %}</button>
+    <a href="{% url 'profile' request.user.id %}" role="button" class="btn btn-primary w25 mb-3">Cancel</a>
   </form>
 </div>
 
