--- a/staticfiles/css/style.css
+++ b/staticfiles/css/style.css
@@ -9,10 +9,7 @@
     
     /* Color */
     --white: #FFFFFF;
-    --off-white: #F7F8FA;
     --black: #000000;
-    --sky-blue:#98cae0;
-    --bleu-de-france: #3083dd;
     --soft-green:#6a8c8f30;
     --grey-green:#24494c71;
     
@@ -47,18 +44,19 @@ main {
     font-size: 16px;
 }
 
-hr {
-    width: 95%;
+.btn-edit {
+    margin-top:  1rem;
 }
+
 
 .card-comment {
     border: 1px solid var(--grey-green);
     border-radius: 8px;
     margin-block: 1rem;
     margin-bottom: 1rem;
-   
+    width: 30rem;
     padding: 1rem 1rem 1rem;
-    
+    height: 90%;
     
     
 
@@ -66,6 +64,7 @@ hr {
 /* Footer */
 
 footer {
+    height: fit-content;
     flex-shrink: 1;
     background-color:var(--grey-green);
     display: flex;
@@ -200,23 +199,40 @@ img.logo {
 }
 
 .profile-card {
-    border: solid var(--grey-green);
-    border-radius: 9px;
     margin-top:  2rem;
    
 }
 
-.post-cont {
+/* .post-cont {
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
-}
+} */
 
 .latest-bg {
     background-color:var(--soft-green);
     margin-top: 4rem;
     margin-bottom: 4rem;
    
+}
+
+.about-bg {
+    padding: 1rem;
+    background-color: var(--soft-green);
+}
+
+.about-card {
+    margin-top: 1rem;
+    padding-top: 2rem;
+    padding-bottom: 3rem;
+
+}
+
+.about-card img {
+   border-radius: 8px;
+    width: 20rem;
+    margin-left: 5rem;
+    
 }
 
 
