--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -2,7 +2,6 @@
 
 
 <footer>
-    <p class="text-center">&copy; 2024 Linnéa Ternevik - Charge Together</p> 
     <!--  Social media icons -->
     <a href="" target="_blank" rel="noopener" aria-label="Facebook - Opens in a new tab">
         <img src="{% static '/icons/facebook-round-color-icon.svg' %}" alt="Facebook Icon" class="social-icon">
@@ -12,6 +11,6 @@
     </a>
     <a href="" target="_blank" rel="noopener" aria-label="Twitter - Opens in a new tab">
         <img src="{% static '/icons/x-social-media-logo-icon.svg' %}" alt="Twitter Icon" class="social-icon">
-    </a>
-    
+    </a> 
 </footer>
+<small><p class="text-center">&copy; 2024 Linnéa Ternevik - Charge Together</p></small>
