--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -14,6 +14,9 @@
                         {% else %}
                         <img src="{% static '/icons/no-image-photography-icon.webp' %}" alt="Image not found icon">
                     {% endif %}
+                    {% if request.user == profile.user %}
+                            <button id="myBtn" class="btn btn-secondary w-30 btn-edit">Edit Profile</button>
+                         {% endif %}
                 </div>
                 <div class="col-md-8">
                     <div class="profile-card-body">
@@ -31,9 +34,7 @@
                 </div>
             </div>
         </div>
-        {% if request.user == profile.user %}
-            <button id="myBtn" class="btn btn-secondary w-25 btn-edit">Edit</button>
-        {% endif %}
+        
     </div>
 </div>
 
