cleaning up code

--- a/about/templates/about/about.html
+++ b/about/templates/about/about.html
@@ -12,7 +12,7 @@
             </div>
             <div class="col-md-8">
                 <div class="card-body">
-                    <h2 class="card-title">Why I Started Charge-Together:</h2><br>
+                    <h3 class="card-title">Why I Started Charge-Together:</h3><br>
                     <p class="card-text">When Our daughter was born with CHARGE syndrome,
                          ur world changed. 
                         <br>Navigating the medical complexities, daily challenges, 
@@ -21,8 +21,7 @@
                         is vital, <br>it is the personal stories and shared experiences 
                         that truly help families cope and thrive. <br>
                         I found myself desperately seeking the experiences 
-                        and stories of others <br> who were on a similar journey</p> 
-            
+                        and stories of others <br> who were on a similar journey
                         I longed for the comfort and guidance that only personal stories can provide,
                         <br>but struggled to find a community where these narratives were shared. <br>
                         This profound need for connection and understanding inspired me to start this blog. <br>
@@ -31,12 +30,13 @@
                         through the unique journey of living with CHARGE syndrome. <br><br>
                         Thank you for being a part of this community. <br>
                         All my love <br> Linnéa
-                    
                     </p>
+                
                 </div>
             </div>
         </div>
     </div>
+    <br>
     <div class="about-card mb-3" style="width:100%">   
         <div class="row g-0">
             <div class="col-md-4">
@@ -44,7 +44,7 @@
             </div>
             <div class="col-md-8">
                 <div class="card-body">
-                    <h2 class="card-title"> Sharing Personal Stories:</h2><br>
+                    <h3 class="card-title"> Sharing Personal Stories:</h3><br>
                     <p class="card-text">
                         This blog provides a platform for families to share their personal experiences with CHARGE syndrome. <br>
                         These stories offer practical advice, emotional support, <br> and a sense of connection that is often missing in medical literature.
@@ -61,7 +61,7 @@
             </div>
             <div class="col-md-8">
                 <div class="card-body">
-                    <h2 class="card-title"> Building a Support Network:</h2><br>
+                    <h3 class="card-title"> Building a Support Network:</h3><br>
                     <p class="card-text">
                         Connecting with others who understand the unique challenges of CHARGE syndrome <br> can make a significant difference. <br>
                         This blog aims to build a network of support where members can share advice, offer encouragement, <br> and form meaningful connections.
@@ -74,11 +74,11 @@
     <div class="about-card mb-3" style="width:100%">
         <div class="row g-0">
             <div class="col-md-4">
-                <img src="{% static 'images/Not-all-heroes- wear-capes .webp' %}" class="img-fluid rounded-start" alt="">
+                <img src="{% static 'images/not-all-heroes-wear-capes.webp' %}" class="img-fluid rounded-start" alt="">
             </div>
             <div class="col-md-8">
                 <div class="card-body">
-                    <h2 class="card-title">Inspiring Hope and Resilience:</h2><br>
+                    <h3 class="card-title">Inspiring Hope and Resilience:</h3><br>
                     <p class="card-text">
                         The stories shared here are a testament to the incredible strength and resilience of <br>
                         individuals and families affected by CHARGE syndrome. <br>
@@ -96,7 +96,7 @@
             </div>
             <div class="col-md-8">
                 <div class="card-body">
-                    <h2 class="card-title">Want to read more about Charge Syndrome?</s></h2><br>
+                    <h3 class="card-title">Want to read more about Charge Syndrome?</s></h3><br>
             
                        <a style="text-decoration:none;" target="_blank" href="https://my.clevelandclinic.org/health/diseases/23472-charge-syndrome"> 
                         If you click here, you can read more in-depth medical information about what Charge Syndrome means
@@ -108,4 +108,3 @@
     </div>
 {% endblock content %}
 
-https://my.clevelandclinic.org/health/diseases/23472-charge-syndrome
