--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -9,7 +9,7 @@
     <nav class="navbar navbar-expand-lg" data-bs-target="light">
       <div class="container-fluid">
         <!-- Logo -->
-        <a class="navbar-brand" href="#"><img src="{% static 'images/logo.webp' %}" alt="Charge Together Logo" class="logo"></a>
+        <a class="navbar-brand" href="{% url 'home' %}"><img src="{% static 'images/logo.webp' %}" alt="Charge Together Logo" class="logo"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
