add edit function to the comments

--- a/blog/templates/blog/edit_comment.html
+++ b/blog/templates/blog/edit_comment.html
@@ -1,4 +1,4 @@
-<!-- {% extends 'base.html' %}
+{% extends 'base.html' %}
 
 {% block title %}Edit Comment{% endblock title %}
 
@@ -13,4 +13,4 @@
         </div>
     </form>
 </div>
-{% endblock content %} -->
+{% endblock content %}
