add delete function to the comments

--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -71,6 +71,7 @@
                 </p>
                 {% if request.user == comment.user %}
                 <a href="{% url 'edit_comment' comment.id %}"><small>Edit</small></a>
+                <a href="{% url 'delete_comment' comment.id %}"><small>Delete</small></a>
                 {% endif %}
             </div>
             
