--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,11 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=EB+Garamond:wght@400;500;600&family=Roboto:wght@400;500&display=swap');
 
 /* Main color and image */
 
 :root {
     /* Fonts */
-    --title: 'GB Garamond', serif;
-    --main-font:'Montserrat', serif;
+    --title: 'EB Garamond', serif;
+    --main-font:'Roboto', serif;
     
     /* Color */
     --white: #FFFFFF;
@@ -82,26 +82,26 @@ footer {
 
 .navbar {
     background: var(--white);
-   
 }
-
 
 a.nav-link {
     color: var(--black);
+   
 }
 
+.active{
+    border-bottom: 1px solid var(--grey-green);
+    
+}
 
 img.logo {
     width:18.75rem; 
     padding-top: 1rem;
-    padding-left: 1rem;
+    
 }
 
 
-.active {
-    border-bottom: 1px solid var(--grey-green);
-    font-weight: 500;
-}
+
 
 
 /* Form Styling */
