--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -1,8 +1,10 @@
 {% extends "base.html" %}
 {% load static %}
 
-{% block title %}Profile - {{profile.user.username}}{% endblock title %}
 
+
+{% block title %}Profile - {{profile.user.username}}{% endblock title %}
+<!-- The profile page -->
 {% block content %}
 <div class="container">
     <div class="profile-info">
@@ -37,8 +39,7 @@
         
     </div>
 </div>
-
-
+<!-- Users own blog posts on their profile -->
 <div class="latest-bg">
     <h2 class="text-center pb-4">Latest Post</h2>
     <div class="card-container d-flex flex-row flex-wrap justify-content-center row row-cols-1 row-cols-md-3 g-2">
@@ -58,7 +59,7 @@
         {% endfor %}
     </div>
 </div>
-    <!-- The Modal -->
+    <!-- The Modal for editin profile -->
     <div id="myModal" class="modal mt-5">
         <!-- Modal content -->
         <div class="modal-content container">
@@ -76,6 +77,7 @@
     </div>
 {% endblock content %}
 
+<!-- extra js for the model to edit profile-->
 {% block extra_js %}
 {{ block.super }}
 <script>
