cleaning up the code

--- a/about/templates/about/about.html
+++ b/about/templates/about/about.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{%  extends 'base.html' %}
 {% load static %}
 
 {% block title %}About{% endblock title %}
@@ -13,8 +13,7 @@
             <div class="col-md-8">
                 <div class="card-body">
                     <h3 class="card-title">Why I Started Charge-Together:</h3><br>
-                    <p class="card-text">When Our daughter was born with CHARGE syndrome,
-                         ur world changed. 
+                    <p class="card-text">When Our daughter was born with CHARGE Syndrome, our world changed. 
                         <br>Navigating the medical complexities, daily challenges, 
                         and emotional rollercoaster <br> was overwhelming. 
                         I realized that while medical information 
@@ -96,8 +95,7 @@
             </div>
             <div class="col-md-8">
                 <div class="card-body">
-                    <h3 class="card-title">Want to read more about Charge Syndrome?</s></h3><br>
-            
+                    <h3 class="card-title">Want to read more about Charge Syndrome?</h3><br>
                        <a style="text-decoration:none;" target="_blank" href="https://my.clevelandclinic.org/health/diseases/23472-charge-syndrome"> 
                         If you click here, you can read more in-depth medical information about what Charge Syndrome means
                         </a>
