--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -13,4 +13,4 @@
         <img src="{% static '/icons/x-social-media-logo-icon.svg' %}" alt="Twitter Icon" class="social-icon">
     </a> 
 </footer>
-<small><p class="text-center">&copy; 2024 Linnéa Ternevik - Charge Together</p></small>
+<p class="text-center">&copy;<small> 2024 Linnéa Ternevik - Charge Together</small></p>
