--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -1,29 +1,28 @@
 {% extends 'base.html' %}
 {% load static %}
+
 {% block title %}Home{% endblock title %}
 
-
 {% block content %}
-<div class="container flex-column pt-3">
-    <section class="text-center">
-        <h1 class="main-title mx-auto">Welcome to Our CHARGE Syndrome Family Community</h1>
+    <div class="container flex-column pt-3">
+        <section class="text-center">
+            <h1 class="main-title mx-auto">Welcome To Our CHARGE Syndrome Family Community</h1>
 
-        <p class="pt-4">
-            Welcome to our blog, a dedicated space for families and relatives of individuals 
-            with CHARGE syndrome. Here, you will find a wealth of information, support, and community as
-            we navigate the complexities of this unique genetic condition together. <br>
-            CHARGE syndrome presents a variety of challenges, but you are not alone. Our blog aims to 
-            provide personal stories and practical tips, to help you better understand and manage the
-            journey of living with CHARGE syndrome. <br>
-            
-            Whether you are a parent, sibling, grandparent, or extended family member, this blog is 
-            designed to offer you the knowledge and encouragement needed to support your loved one. 
-            We celebrate the resilience, strength, and love that binds families together in the face of CHARGE syndrome.
-            Join us as we share experiences, resources, and hope, creating a supportive network for all families 
-            touched by CHARGE syndrome!
-        </p>
-    </section>
-   
-
+            <p class="pt-4">
+                Welcome to our blog, a dedicated space for families and relatives of individuals 
+                with CHARGE syndrome. Here, you will find a wealth of information, support, and community as
+                we navigate the complexities of this unique genetic condition together. <br>
+                CHARGE syndrome presents a variety of challenges, but you are not alone. Our blog aims to 
+                provide personal stories and practical tips, to help you better understand and manage the
+                journey of living with CHARGE syndrome. <br>
+                
+                Whether you are a parent, sibling, grandparent, or extended family member, this blog is 
+                designed to offer you the knowledge and encouragement needed to support your loved one. 
+                We celebrate the resilience, strength, and love that binds families together in the face of CHARGE syndrome.
+                Join us as we share experiences, resources, and hope, creating a supportive network for all families 
+                touched by CHARGE syndrome!
+            </p>
+        </section>
+    </div>  
 {% endblock content %}
 
