--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -1,71 +1,58 @@
 {% load static %}
 
-
-  
-
 <header>
-  
   {% with request.resolver_match.url_name as url_name %}
-    <nav class="navbar navbar-expand-lg" data-bs-target="light">
+    <nav class="navbar navbar-expand-lg bg-light">
       <div class="container-fluid">
         <!-- Logo -->
         <a class="navbar-brand" href="{% url 'home' %}"><img src="{% static 'images/logo.webp' %}" alt="Charge Together Logo" class="logo"></a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <!-- Navigation items -->
-        <div class="collapse navbar-collapse justify-content-center" id="navbarNavDropdown">
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link {% if url_name == 'home' %}active{% endif %}" aria-current="page"
-                href="{% url 'home' %}">Home</a>
+              <a class="nav-link {% if url_name == 'home' %}active{% endif %}" aria-current="page" href="{% url 'home' %}">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link {% if url_name == 'post_list' %}active{% endif %}" aria-current="page"
-                href="{% url 'post_list' %}">Blog</a>
+              <a class="nav-link {% if url_name == 'post_list' %}active{% endif %}" href="{% url 'post_list' %}">Blog</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link {% if url_name == 'about' %}active{% endif %}" aria-current="page" href="{% url 'about' %}">About</a>
+              <a class="nav-link {% if url_name == 'about' %}active{% endif %}" href="{% url 'about' %}">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link {% if url_name == 'contact' %}active{% endif %}" aria-current="page" 
-                href="{% url 'contact' %}">Contact</a>
-
-              {% if request.user.is_authenticated %}
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  {{ user.username }}
-                </a>
+              <a class="nav-link {% if url_name == 'contact' %}active{% endif %}" href="{% url 'contact' %}">Contact</a>
+            </li>
+            {% if request.user.is_authenticated %}
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="" role="button" data-bs-toggle="dropdown" aria-expanded="false">{{ user.username }}</a>
               <ul class="dropdown-menu">
                 <li class="nav-item">
-                  <a class="nav-link {% if url_name == 'profile' %}active{% endif %}"
-                    href="{% url 'profile' request.user.id %}">Profile</a>
+                  <a class="nav-link {% if url_name == 'profile' %}active{% endif %}" href="{% url 'profile' request.user.id %}">Profile</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link  {% if url_name == 'create_post' %}active{% endif %}"
-                    href="{% url 'create_post' %}">Create Post</a>
+                  <a class="nav-link  {% if url_name == 'create_post' %}active{% endif %}" href="{% url 'create_post' %}">Create Post</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link {% if url_name == 'accounts_logout' %}active{% endif %}"
-                    href="/accounts/logout/">Logout</a>
+                  <a class="nav-link {% if url_name == 'accounts_logout' %}active {% endif %}" href="/accounts/logout/">Logout</a>
                 </li>
               </ul>
+            </li>
             {% else %}
             <li class="nav-item">
-              <a class="nav-link {% if url_name == 'accounts_signup' %}active{% endif %}"
-                href="/accounts/signup/">Register</a>
+              <a class="nav-link {% if url_name == 'accounts_signup' %}active{% endif %}" href="/accounts/signup/">Register</a>
             </li>
             <li class="nav-item">
               <a class="nav-link {% if url_name == 'accounts_login' %}active{% endif %}" href="/accounts/login/">Login</a>
             </li>
             {% endif %}
-            </li>
           </ul>
         </div>
       </div>
     </nav>
-  {% endwith %} 
-  <div class="hero container-fluid">
-    <img style="width:100%;" src="{% static 'images/carl-hunley-jr-kZ_GzLAy4WM-unsplash.webp' %}" alt="image">
-  </div>
+  {% endwith %}
+    <div class="hero container-fluid">
+      <img src="{% static 'images/carl-hunley-jr-kZ_GzLAy4WM-unsplash.webp' %}" alt="image">
+    </div>
 </header>
