--- a/staticfiles/css/style.css
+++ b/staticfiles/css/style.css
@@ -50,9 +50,11 @@ main {
 .btn-like {
     border: none;
     background-color: var(--white);
-    font-size: 16px;
+    font-size: 17px;
 }
-
+.fa-comments{
+    font-size: 17px;
+}
 .btn-edit {
     margin-top: 1rem;
 }
@@ -112,6 +114,11 @@ img.logo {
 
 }
 
+.hero img {
+   width:100%;
+   height: auto;
+}
+
 
 
 /* Form Styling */
@@ -127,23 +134,17 @@ img.logo {
 /* Styling Blog Post */
 
 .card {
-    width: 20rem;
+  
     padding: 1rem 1rem 1rem;
-    height: 90%;
+    height: 92%;
     box-shadow: var(--small-box-shadow);
 }
 
 .card img {
-    border-radius: 8px;
-    height: 16rem;
-    width: 18rem;
+    border-radius: 8px; 
 
 }
 
-.card h2 {
-    font-size: 20px;
-
-}
 
 .post {
     text-decoration: none;
@@ -181,6 +182,7 @@ img.logo {
 }
 
 .post-img {
+    width: 50%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -204,7 +206,7 @@ img.logo {
 }
 
 .card-container {
-
+    
     padding-bottom: 3rem;
 }
 
@@ -252,14 +254,12 @@ img.logo {
         flex-direction: row;
         width: 29%;
     }
+    
 }
 
+
 @media screen and (min-width: 62.5em) {
-    .card h2 {
-        font-size: 25px;
-
-    }
-
+    
     .post-info {
         flex-direction: row;
         border: 1px solid var(--grey-green);
@@ -300,4 +300,5 @@ img.logo {
         margin-left: 1rem;
     }
 
+   
 }
